syntax = "proto3";

package proto;

option go_package = "github.com/rasha-hantash/golang/concurrentgrpccalls/proto";

service HealthService {
  rpc SubmitHealth (HealthRequest) returns (HealthResponse) {}
}

message HealthRequest {
  string client_id = 1;
}

message HealthResponse {
  string status = 1;
}